force-app/main/default/objects/Stock_Data__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <label>Ativo</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>