force-app/main/default/objects/Stock_Data__c/fields/Gain_Loss__c.field-meta.xml
<CustomField>
    <fullName>Gain_Loss__c</fullName>
    <label>Gain / Loss %</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>