force-app/main/default/objects/Stock_Data__c/fields/Long_ou_Short__c.field-meta.xml
<CustomField>
    <fullName>Long_ou_Short__c</fullName>
    <label>Long ou Short</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Long</fullName>
                <default>true</default>
                <label>Long</label>
            </value>
            <value>
                <fullName>Short</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>