force-app/main/default/objects/Stock_Data__c/fields/Num_Contratos__c.field-meta.xml
<CustomField>
    <fullName>Num_Contratos__c</fullName>
    <label>Num Contratos</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>