force-app/main/default/objects/Stock_Data__c/fields/Preco_Medio__c.field-meta.xml
<CustomField>
    <fullName>Preco_Medio__c</fullName>
    <label>Preco Medio</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>