force-app/main/default/objects/Stock_Data__c/fields/Ultima_Operacao__c.field-meta.xml
<CustomField>
    <fullName>Ultima_Operacao__c</fullName>
    <label>Última Operação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compra</fullName>
                <default>true</default>
                <label>Compra</label>
            </value>
            <value>
                <fullName>Venda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>