force-app/main/default/objects/Stock_Data__c/fields/Ultimo_Preco__c.field-meta.xml
<CustomField>
    <fullName>Ultimo_Preco__c</fullName>
    <label>Último Preço</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>